2004-10-06  Derek Price  <derek@ximbiot.com>

	* gnulib-update (MODULES): Add strcase.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* configure.in: Remove call to gl_FUNC_GETHOSTNAME.
	* gnulib-update (MODULES): Add gethostname.
	* srclist.txt (gethostname): Remove list generated by gnulib-update.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* configure.in: Remove calls to AM_FUNC_GETLINE, gl_GETNLINE,
	& gl_GETNDELIM2.
	* gnulib-update (MODULES): Add getline, getnline, & getndelim2.
	* srclist.txt (getline, getnline, getndelim2): Remove lists now
	generated by gnulib-update.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* configure.in: Remove call to AM_STDBOOL_H.
	* gnulib-update (MODULES): Add stdbool.
	* srclist.txt (stdbool): Remove list now generated by gnulib-update.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* configure.in: Remove call to gl_GETOPT.
	* gnulib-update (MODULES): Add getopt.
	* srclist.txt (getopt): Remove list now generated by gnulib-update.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* configure.in: Remove call to UTILS_FUNC_MKSTEMP.
	* gnulib-update (MODULES): Add mkstemp.
	* srclist.txt (mkstemp): Remove list now generated by gnulib-update.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* configure.in: Remove call to gl_FUNC_FNMATCH_POSIX.
	* gnulib-update (MODULES): Add fnmatch & fnmatch-posix.
	* srclist.txt (fnmatch, fnmatch-posix): Remove list now generated by
	gnulib-update.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* gnulib-update (MODULES): Add extensions.
	* srclist.txt (extensions): Remove list now generated by gnulib-update.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* configure.in: Remove call to gl_EXITFAIL.
	* gnulib-update (MODULES): Add exitfail.
	* srclist.txt (exitfail): Remove list now generated by gnulib-update.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* gnulib-update (MODULES): Add exit.
	* srclist.txt (exit): Remove list now generated by gnulib-update.
