@@ -214,7 +214,6 @@ AC_FUNC_GETTIMEOFDAY_CLOBBER
 AC_FUNC_STRERROR_R
 dnl Always use the GNULIB getpass to work around 8 character password limits on
 dnl HP-UX.
-gl_FUNC_GETPASS_GNU
 gl_FUNC_GLIBC_UNLOCKED_IO
 gl_FUNC_GNU_STRFTIME
 gl_FUNC_MEMMOVE
