@@ -1,5 +1,11 @@
 2004-10-06  Derek Price  <derek@ximbiot.com>
 
+	* configure.in: Remove call to gl_FUNC_GETPASS.
+	* gnulib-update (MODULES): Add getpass.
+	* srclist.txt (getpass): Remove list generated by gnulib-update.
+
+2004-10-06  Derek Price  <derek@ximbiot.com>
+
 	* gnulib-update (MODULES): Add strcase.
 
 2004-10-06  Derek Price  <derek@ximbiot.com>
